Fayllar qo‘shildi yoki o‘zgartirildi

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class=" container header-container" data-aos="fade-down"  data-aos-duration="500">
             <a href="#" class="header-logo-link"><img src="./img/Logo.png" alt="" class="header-img"></a>
             <ul class="header-list">
-                <li class="header-item"><a href="#" class="header-link-head">Menu</a></li>
-                <li class="header-item"><a href="#" class="header-link-head">News</a></li>
-                <li class="header-item"><a href="#" class="header-link-head">About Us</a></li>
-                <li class="header-item"><a href="#" class="header-link-head">Contact Us</a></li>
+                <li class="header-item"><a href="#Menu" class="header-link-head">Menu</a></li>
+                <li class="header-item"><a href="#News" class="header-link-head">News</a></li>
+                <li class="header-item"><a href="#About-us" class="header-link-head">About Us</a></li>
+                <li class="header-item"><a href="#Contact-us" class="header-link-head">Contact Us</a></li>
                 <li class="header-item">
                     <span class="header-span">
                         <button class="header-button">Log in</button>
@@ -107,7 +107,7 @@
         </div>
     </div>
 
-    <div class="wrapper">
+    <div class="wrapper" id="Menu">
         <div class=" conatiner wrapper-container">
             <h3 class="wrapper-title">Our Regular Menu Pack</h3>
             <ul class="wrapper-list">
@@ -251,7 +251,7 @@
         </div>
     </div>
 
-    <div class="news">
+    <div class="news" id="News">
         <div class=" container news-container">
             <div class="news-head">
                 <h4 class="news-title">News</h4>
@@ -294,7 +294,7 @@
         </div>
     </div>
 
-    <div class="home">
+    <div class="home" id="About-us">
         <div class=" container home-container">
             <div class="home-left">
                 <h5 class="home-title">Instagram</h5>
@@ -311,6 +311,7 @@
             </div>
         </div>
     </div>
+
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
